--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://www.frontendmentor.io/profile/chaimyaham">Your Name Here</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/chaimyaham">Chaimaa Yaham</a>.
   </div>
 
 
